--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,63 +2,492 @@
 
 :root {
   --primary: #072ac8;
+  --primaryLight: #a2d6f9;
+  --primaryLighter: #d1edff;
+  --secondaryLight: #fce300;
+  --secondaryDark: #ffc600;
+  --neutralLight: #f4f6fc;
+  --neutralMedium: #6b708d;
+  --neutralDark: #292e47;
+  --wrong: #b33a3a;
+  --right: #28a428;
+  --white: #fff;
+  --black: #000;
+  --diameter: 25vw;
+  --circular-line-width: 2px;
+  --background: #000;
+  --line-color: #ff0055;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  background-color: #f2f4fc;
+  color: #292e47;
 }
 
-
+section,
+footer {
+  max-width: 1063px;
+  margin: auto;
+}
 
 /* ------------------------------------------------------------------------ */
 /* ------------------------------ INDEX html ------------------------------ */
 /* ------------------------------------------------------------------------ */
 
-/* ------------------------------ Splash page ------------------------------ */
-
-/* Your CSS code goes here */
-
-/* ------ CIRCULAR ANIMATION ------ */
-
-/* Your CSS code goes here */
-
 /* ------------------------------ Navbar ------------------------------ */
 
-/* Your CSS code goes here */
+nav {
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 75px auto;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: #6c718b;
+  font-weight: 500;
+  font-size: 1.05rem;
+  margin: 0 14px 0 14px;
+}
+
+.navigation a:hover {
+  color: #0082f3;
+  cursor: pointer;
+}
+
+.btn-contact {
+  background-color: #072ac8;
+  color: white;
+  font-weight: 500;
+  font-size: 1.05rem;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.link {
+  text-decoration: none;
+  color: #6c718b;
+  font-weight: 500;
+  font-size: 1.05rem;
+  margin: 10px
+}
+
+.btn-contact:hover {
+  background-color: #292e47;
+}
 
 /* ------------------------------ Header ------------------------------ */
 
-/* Your CSS code goes here */
+#main {
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#main > div {
+  width: 46%;
+  margin-left: 160px;
+  margin-right: -150px;
+}
+
+.txt-block h1 {
+  font-size: 3.9rem;
+  color: #292e47;
+}
+
+.btns-top-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  padding: 50px;
+}
+
+
+.txt-block p {
+  font-size: 1.3rem;
+  color: #6b708d;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 30px 0 50px 0;
+}
+
+#img-block {
+  position: relative;
+}
+
+#main-img {
+  width: 100%;
+}
+
+#credit-card {
+  position: absolute;
+  left: -19%;
+  top: 0%;
+  right: auto;
+  bottom: auto;
+  max-width: 57%;
+}
+
+#project-accepted-img {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: -25%;
+  bottom: -22%;
+  max-width: 57%;
+  z-index: 999;
+}
 
 /* ------------------------------ Partners ------------------------------ */
 
-/* Your CSS code goes here */
+.partners {
+  width: 97vw;
+  height: 20vh;
+  overflow: hidden;
+  margin-top: 100px;
+}
+
+.brand-content {
+  display: flex;
+  height: 100%;
+  animation: scrolling 20s linear infinite;
+}
+
+@keyframes scrolling {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-140vw);
+  }
+}
+
+.brand-content a {
+  width: 20vw;
+  flex-shrink: 0;
+  white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-client {
+  margin: 0 auto;
+  filter: grayscale(1);
+  width: 10rem;
+}
+
+.img-client:hover {
+  filter: grayscale(0);
+}
 
 /* ------------------------------ Recent projects ------------------------------ */
 
-/* Your CSS code goes here */
+.title {
+  margin: 100px 0 75px 0;
+}
+
+.title h2 {
+  font-size: 2.5rem;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 25px;
+  grid-row-gap: 0px;
+}
+
+.project {
+  background-color: white;
+  padding-bottom: 20px;
+}
+
+.project img {
+  width: 100%;
+  height: 240px;
+}
+
+.project h3 {
+  font-size: 1.3rem;
+  margin: 27px;
+}
+
+.project p {
+  font-size: 1.1rem;
+  margin: 0 27px 27px 27px;
+}
+
+.project a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #072ac8;
+  margin: 0 27px 27px 27px;
+}
 
 /* ------------------------------ Client reviews ------------------------------ */
 
-/* Your CSS code goes here */
+#reviews {
+  background-color: #292e47;
+  background-image: url("../images/testimonial-section/orbit.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  margin-top: 150px;
+  max-width: 1200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+}
+
+#reviews h2 {
+  color: white;
+  font-size: 2.1rem;
+}
+
+#reviews p {
+  width: 55%;
+  color: gold;
+  font-size: 1.7rem;
+}
+
+.autor {
+  width: 17%;
+  display: flex;
+  /* justify-content: space-around; */
+}
+
+.autor img {
+  width: 48px;
+  height: 48px;
+  border-radius: 100px;
+  margin-right: 10px;
+}
+
+.autor h4 {
+  color: #7cc2ff;
+  font-weight: 400;
+}
+
+.autor h5 {
+  color: white;
+  font-weight: 400;
+}
+
+.autor div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.memoji-1 {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  right: auto;
+  bottom: auto;
+}
+.memoji-2 {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 10%;
+  top: 10%;
+  left: auto;
+  bottom: auto;
+}
+.memoji-3 {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  left: 10%;
+  bottom: 10%;
+  right: auto;
+  top: auto;
+}
+.memoji-4 {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+  left: auto;
+  top: auto;
+}
 
 /* ------------------------------ Services ------------------------------ */
 
-/* Your CSS code goes here */
+#services {
+  width: 80vw;
+}
+
+.services-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 25px;
+  grid-row-gap: 0px;
+}
+
+.service {
+  background-color: white;
+  padding-bottom: 20px;
+}
+
+#service-img1 {
+  background-image: url("../images/services-section:icons/1.svg");
+  background-size: 46%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  background-color: #ecf6ff;
+  border-radius: 100px;
+  margin: 34px 0 0 34px;
+}
+
+#service-img2 {
+  background-image: url("../images/services-section:icons/2.svg");
+  background-size: 46%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  background-color: #ecf6ff;
+  border-radius: 100px;
+  margin: 34px 0 0 34px;
+}
+
+#service-img3 {
+  background-image: url("../images/services-section:icons/3.svg");
+  background-size: 46%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  background-color: #ecf6ff;
+  border-radius: 100px;
+  margin: 34px 0 0 34px;
+}
+
+.service h3 {
+  font-size: 1.3rem;
+  margin: 27px;
+}
+
+.service p {
+  font-size: 1.1rem;
+  margin: 0 27px 27px 27px;
+}
+
+.service a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #072ac8;
+  margin: 0 27px 27px 27px;
+}
 
 /* ------------------------------ Questions form ------------------------------ */
 
-/* Your CSS code goes here */
+#help {
+  background-color: #ffc600;
+  height: 400px;
+  margin-top: 150px;
+  max-width: 1215px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+#help p {
+  color: #6c718b;
+  font-weight: 400;
+  margin: 20px 0 50px 0;
+}
+
+.title-subscribe h2 {
+  font-size: 2.5rem;
+}
+
+#email-input {
+  border: 0;
+  height: 70px;
+  font-weight: 400;
+  font-size: 1.1rem;
+  width: 500px;
+  background: url("../images/newsletter/icon/mail.svg") no-repeat scroll 7px 7px;
+  background-position: 3% 50%;
+  background-color: white;
+  padding-left: 50px;
+}
+
+.email-subscribe {
+  width: 100%;
+}
+
+#email-sub-btn {
+  background-color: #072ac8;
+  color: white;
+  font-weight: 500;
+  font-size: 1.05rem;
+  padding: 25px 50px 25px 50px;
+  text-decoration: none;
+  margin-left: 12px;
+}
 /* ------------------------------ Footer ------------------------------ */
 
-/* Your CSS code goes here */
+footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+.grid-links {
+  width: 35%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+}
+
+.grid-links a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #072ac8;
+  height: 30px;
+}
+
+.bottom-img-logo img {
+  width: 100px;
+  margin-bottom: 20px;
+}
 
 /* -------------------------------------------------------------------------- */
 /* ------------------------------ PROJECT html ------------------------------ */
@@ -66,7 +495,36 @@ body {
 
 /* ------------------------------ Project main ------------------------------ */
 
-/* Your CSS code goes here */
+.subtitle {
+  display: flex;
+  justify-content: space-between;
+}
+
+.subtitle h2,
+.subtitle h3 {
+  font-weight: 400;
+  color: #6c718b;
+  margin: 25px 0 55px 0;
+}
+
+.txt-title h1 {
+  font-size: 3.9rem;
+  color: #292e47;
+}
+
+.img-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 444px;
+  margin-bottom: 70px;
+}
+
+.txt-container p {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
 
 /* ----------------------------------------------------------------------------- */
 /* ------------------------------ CONTACT-US html ------------------------------ */
@@ -74,36 +532,428 @@ body {
 
 /* ------------------------------ Form ------------------------------ */
 
-/* Your CSS code goes here */
+.form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.email-phone {
+  display: flex;
+  justify-content: space-between;
+}
+
+.email-phone div {
+  width: 49.5%;
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-main,
+#project-main {
+  padding: 0 14px 0 14px;
+}
+
+#contact-main .txt-title h1 {
+  padding-bottom: 70px;
+}
+
+label {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #6b708d;
+  margin-bottom: 10px;
+}
+
+input {
+  border: 0;
+  background-color: rgba(107, 112, 141, 0.1);
+  height: 70px;
+  font-weight: 400;
+  font-size: 1.1rem;
+  padding-left: 15px;
+  margin-bottom: 24px;
+}
+
+textarea {
+  border: 0;
+  background-color: rgba(107, 112, 141, 0.1);
+  height: 200px;
+  font-weight: 400;
+  font-size: 1.1rem;
+  padding-top: 7px;
+  padding-left: 15px;
+  margin-bottom: 24px;
+}
+
+.btn-submit {
+  background-color: #072ac8;
+  color: white;
+  font-weight: 500;
+  font-size: 1.05rem;
+  padding: 25px;
+  text-decoration: none;
+}
+
+.btn-submit:hover {
+  background-color: #292e47;
+}
 
 /* ----------------------------------------------------------------------------- */
-/* ------------------------------ About html ------------------------------ */
-/* ----------------------------------------------------------------------------- */
 
-/* Your CSS code goes here */
-
-/* --------------------------------------------------------------------------- */
 /* ------------------------------ MEDIA QUERIES ------------------------------ */
 /* --------------------------------------------------------------------------- */
 
 /* ------------------------- Smaller than 990px (tablet) ------------------------- */
 @media (max-width: 990px) {
-  /* Your CSS code goes here */
+/* ------------------------------ Navbar ------------------------------ */
+.navigation {
+  display: none;
+}
+
+nav {
+  margin: 0 auto 75px auto;
+  padding: 0 30px 15px 30px;
+  height: 80px;
+}
+
+/* ------------------------------ Header ------------------------------ */
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#main div {
+  width: 100%;
+  text-align: center;
+  margin-right: 60px;
+}
+.btns-top-container {
+  flex-direction: row-reverse;
+}
+#main-img {
+  width: 70%;
+}
+#img-block {
+  margin-top: 76px;
+}
+#credit-card {
+  position: absolute;
+  left: 3%;
+  top: 0%;
+  right: auto;
+  bottom: auto;
+  max-width: 34%;
+}
+#project-accepted-img {
+  position: absolute;
+  left: auto;
+  top: auto;
+  right: 4%;
+  bottom: -22%;
+  max-width: 34%;
+  z-index: 999;
+}
+
+/* ------------------------------ Partners ------------------------------ */
+.partners {
+  overflow: visible;
+}
+
+.brand-content {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90vw;
+  animation: none;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  gap: 2rem;
+}
+
+.img-client {
+  filter: grayscale(0);
+  width: 7rem;
+}
+
+#hide {
+  display: none;
+}
+
+/* ---------------------------- Recent projects ---------------------------- */
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 44px;
+  grid-row-gap: 44px;
+  margin: 0 44px 0 44px;
+}
+.title {
+  margin-left: 30px;
+}
+
+/* ------------------------------ Client reviews ------------------------------ */
+.memoji-1,
+.memoji-2,
+.memoji-3,
+.memoji-4 {
+  width: 96px;
+  height: 96px;
+}
+.autor {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+#top-contact-btn {
+  display: none;
+}
+.txt-title h1 {
+  font-size: 3rem;
+  color: #292e47;
+}
 }
 
 /* ------------------------- Smaller than 766px (mobile) ------------------------- */
 @media (max-width: 766px) {
-  /* Your CSS code goes here */
+
+  /* ------------------------------ Header ------------------------------ */
+  #credit-card,
+  #project-accepted-img {
+    display: none;
+  }
+  .txt-block h1 {
+    font-size: 2.6rem;
+    color: #292e47;
+  }
+
+  /* ----------------------------- Recent projects ----------------------------- */
+  .projects-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 44px;
+    grid-row-gap: 44px;
+    margin: 0 44px 0 44px;
+  }
+
+  /* ------------------------------ Client reviews ------------------------------ */
+  .memoji-1,
+  .memoji-2,
+  .memoji-3,
+  .memoji-4 {
+    display: none;
+  }
+  #reviews {
+    justify-content: center;
+    height: 370px;
+  }
+  #reviews p {
+    width: 95%;
+    color: gold;
+    font-size: 1.7rem;
+    margin: 40px 0 40px 0;
+  }
+
+  /* ------------------------------ Services ------------------------------ */
+  .services-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 44px;
+    grid-row-gap: 44px;
+    margin: 0 44px 0 44px;
+  }
+
+  /* ------------------------------ Questions form ------------------------------ */
+  .email-subscribe {
+    display: flex;
+    flex-direction: column;
+  }
+  #email-input {
+    border: 0;
+    height: 70px;
+    font-weight: 400;
+    font-size: 1.1rem;
+    width: 100%;
+    background: url("../images/newsletter:icon/mail.svg") no-repeat scroll 7px
+      7px;
+    background-position: 3% 50%;
+    background-color: white;
+    padding-left: 50px;
+  }
+
+  .email-subscribe {
+    width: 56%;
+  }
+
+  #email-sub-btn {
+    background-color: #072ac8;
+    color: white;
+    width: 100%;
+    font-weight: 500;
+    font-size: 1.05rem;
+    padding: 25px 50px 25px 50px;
+    text-decoration: none;
+    margin: 0;
+  }
+  .title-subscribe h2 {
+    font-size: 1.8rem;
+  }
+
+  /* ------------------------------ Footer ------------------------------ */
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 120px;
+    margin-bottom: 120px;
+  }
+  .bottom-logo {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .grid-links {
+    width: 60%;
+    text-align: center;
+  }
+  .email-phone {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .email-phone div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .txt-title h1 {
+    font-size: 2.4rem;
+    color: #292e47;
+  }
+  .subtitle h2,
+  .subtitle h3 {
+    font-size: 1.2rem;
+  }
 }
+
 
 /* ------------------------------ Hamburguer menu ------------------------------ */
 
-/* Your CSS code goes here */
+.menu {
+  display: none;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  z-index: 999;
+}
 
-/* ------------------------------ Alert ------------------------------ */
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
 
-/* Your CSS code goes here */
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-/* ------------------------------ Sticky scroll bar ------------------------------ */
+#menu-toggle {
+  display: none;
+}
 
-/* Your CSS code goes here */
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #6c718b;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+@media (max-width: 990px) {
+  .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    display: flex;
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 0px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #c9c8c9;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 0px solid #444;
+  }
+  .menu li a {
+    text-decoration: none;
+    color: #6c718b;
+    font-weight: 500;
+    font-size: 1.05rem;
+    margin: 0 14px 0 14px;
+  }
+  .menu li a:hover {
+    color: #0082f3;
+  }
+}
